--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@tanstack/react-query-devtools": "^5.61.3",
     "next": "15.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
